# cccolide

./: .gitignore  CMakeLists.txt  README.md  main.cpp  pathsetup_config.h.in  start.scd
Modules/: CMakeCache.txt  FindGLUT.cmake  FindSc.cmake  FindScLang.cmake  Findcprocessing.cmake
assets/: start.scd
src/: CMakeLists.txt  main.cpp
src/oscTester/: SimpleSend.cpp
